--- a/EnergyDrinks/GFuel.css
+++ b/EnergyDrinks/GFuel.css
@@ -15,3 +15,9 @@ h4{
     font-weight:bold;
     text-decoration: underline;
 }
+img{
+    display:block;
+    margin-left: auto;
+    margin-right:auto;
+    width: 400;
+}
